--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Read me file..
+This is a basic Chess game implemented in Java.
 
-BA was here!
+It allows for two players to play chess in the I/O console.
